@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: Em5EventAction.cc,v 1.3 1999-12-15 14:49:10 gunter Exp $
+// $Id: Em5EventAction.cc,v 1.4 2001-02-20 16:26:49 maire Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
@@ -56,11 +56,17 @@ Em5EventAction::~Em5EventAction()
 void Em5EventAction::BeginOfEventAction(const G4Event* evt)
 {
  G4int evtNb = evt->GetEventID();
+
+ //printing survey
  if (evtNb%printModulo == 0) 
     G4cout << "\n---> Begin of Event: " << evtNb << G4endl;
-     
-  if(verboselevel>1)
-    G4cout << "<<< Event  " << evtNb << " started." << G4endl;
+  
+ //save rndm status
+ if (runaction->GetRndmFreq() == 2)
+   { 
+    HepRandom::saveEngineStatus("beginOfEvent.rndm");   
+    if (evtNb%printModulo == 0) HepRandom::showEngineStatus();
+   }
     
   if (calorimeterCollID==-1)
     {
@@ -139,22 +145,6 @@ void Em5EventAction::EndOfEventAction(const G4Event* evt)
                                trj->DrawTrajectory(50); 
       }
   }  
-
-  if(verboselevel>0)
-    G4cout << "<<< Event  " << evt->GetEventID() << " ended." << G4endl;
-  
-  
-  //save rndm status
-  if (runaction->GetRndmFreq() == 2)
-    { 
-     HepRandom::saveEngineStatus("endOfEvent.rndm");   
-     G4int evtNb = evt->GetEventID();
-     if (evtNb%printModulo == 0)
-       { 
-        G4cout << "\n---> End of Event: " << evtNb << G4endl;
-        HepRandom::showEngineStatus();
-       }
-    }     
 }
 
 //....oooOO0OOooo........oooOO0OOooo........oooOO0OOooo........oooOO0OOooo....
