@@ -1,4 +1,4 @@
-$Id: History,v 1.6 2001-01-09 12:36:37 maire Exp $
+$Id: History,v 1.7 2001-02-20 16:26:48 maire Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -15,6 +15,10 @@ track of all tags.
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
 
+20-02-01 mma (testem5-V03-00-02)
+         - verbose stepping adapted for STL
+	 - save rndm at begin of event 
+	     
 09-01-01 mma modified Em5PhysicsList and Em5StepCut in order to make the
          command /step/setMaxStep working
 	      
